Use correct znc network

--- a/home/.weechat/irc.conf
+++ b/home/.weechat/irc.conf
@@ -182,7 +182,7 @@ semipol.autoconnect = on
 semipol.autoreconnect
 semipol.autoreconnect_delay
 semipol.nicks
-semipol.username
+semipol.username = "languitar/freenode"
 semipol.realname
 semipol.local_hostname
 semipol.command
