Add oftc network

--- a/home/.weechat/irc.conf
+++ b/home/.weechat/irc.conf
@@ -161,41 +161,79 @@ ssl_verify = on
 username = "languitar"
 
 [server]
-semipol.addresses = "semipol.de/6667"
-semipol.proxy
-semipol.ipv6
-semipol.ssl = on
-semipol.ssl_cert
-semipol.ssl_priorities
-semipol.ssl_dhkey_size
-semipol.ssl_fingerprint
-semipol.ssl_verify = off
-semipol.password = "${sec.data.semipol}"
-semipol.capabilities
-semipol.sasl_mechanism
-semipol.sasl_username
-semipol.sasl_password
-semipol.sasl_key
-semipol.sasl_timeout
-semipol.sasl_fail
-semipol.autoconnect = on
-semipol.autoreconnect
-semipol.autoreconnect_delay
-semipol.nicks
-semipol.username = "languitar/freenode"
-semipol.realname
-semipol.local_hostname
-semipol.command
-semipol.command_delay
-semipol.autojoin
-semipol.autorejoin
-semipol.autorejoin_delay
-semipol.connection_timeout
-semipol.anti_flood_prio_high
-semipol.anti_flood_prio_low
-semipol.away_check
-semipol.away_check_max_nicks
-semipol.default_msg_kick
-semipol.default_msg_part
-semipol.default_msg_quit
-semipol.notify
+freenode.addresses = "semipol.de/6667"
+freenode.proxy
+freenode.ipv6
+freenode.ssl = on
+freenode.ssl_cert
+freenode.ssl_priorities
+freenode.ssl_dhkey_size
+freenode.ssl_fingerprint
+freenode.ssl_verify = off
+freenode.password = "${sec.data.semipol}"
+freenode.capabilities
+freenode.sasl_mechanism
+freenode.sasl_username
+freenode.sasl_password
+freenode.sasl_key
+freenode.sasl_timeout
+freenode.sasl_fail
+freenode.autoconnect = on
+freenode.autoreconnect
+freenode.autoreconnect_delay
+freenode.nicks
+freenode.username = "languitar/freenode"
+freenode.realname
+freenode.local_hostname
+freenode.command
+freenode.command_delay
+freenode.autojoin
+freenode.autorejoin
+freenode.autorejoin_delay
+freenode.connection_timeout
+freenode.anti_flood_prio_high
+freenode.anti_flood_prio_low
+freenode.away_check
+freenode.away_check_max_nicks
+freenode.default_msg_kick
+freenode.default_msg_part
+freenode.default_msg_quit
+freenode.notify
+oftc.addresses = "semipol.de/6667"
+oftc.proxy
+oftc.ipv6
+oftc.ssl = on
+oftc.ssl_cert
+oftc.ssl_priorities
+oftc.ssl_dhkey_size
+oftc.ssl_fingerprint
+oftc.ssl_verify = off
+oftc.password = "${sec.data.semipol}"
+oftc.capabilities
+oftc.sasl_mechanism
+oftc.sasl_username
+oftc.sasl_password
+oftc.sasl_key
+oftc.sasl_timeout
+oftc.sasl_fail
+oftc.autoconnect = on
+oftc.autoreconnect
+oftc.autoreconnect_delay
+oftc.nicks
+oftc.username = "languitar/oftc"
+oftc.realname
+oftc.local_hostname
+oftc.command
+oftc.command_delay
+oftc.autojoin
+oftc.autorejoin
+oftc.autorejoin_delay
+oftc.connection_timeout
+oftc.anti_flood_prio_high
+oftc.anti_flood_prio_low
+oftc.away_check
+oftc.away_check_max_nicks
+oftc.default_msg_kick
+oftc.default_msg_part
+oftc.default_msg_quit
+oftc.notify
