Verify SSL correctly

--- a/home/.weechat/irc.conf
+++ b/home/.weechat/irc.conf
@@ -169,7 +169,7 @@ freenode.ssl_cert
 freenode.ssl_priorities
 freenode.ssl_dhkey_size
 freenode.ssl_fingerprint
-freenode.ssl_verify = off
+freenode.ssl_verify = on
 freenode.password = "${sec.data.semipol}"
 freenode.capabilities
 freenode.sasl_mechanism
@@ -207,7 +207,7 @@ oftc.ssl_cert
 oftc.ssl_priorities
 oftc.ssl_dhkey_size
 oftc.ssl_fingerprint
-oftc.ssl_verify = off
+oftc.ssl_verify = on
 oftc.password = "${sec.data.semipol}"
 oftc.capabilities
 oftc.sasl_mechanism
