Support variable ZNC client IDs using secure

--- a/home/.weechat/irc.conf
+++ b/home/.weechat/irc.conf
@@ -182,7 +182,7 @@ freenode.autoconnect = on
 freenode.autoreconnect
 freenode.autoreconnect_delay
 freenode.nicks
-freenode.username = "languitar/freenode"
+freenode.username = "languitar@${sec.data.clientid}/freenode"
 freenode.realname
 freenode.local_hostname
 freenode.command
@@ -220,7 +220,7 @@ oftc.autoconnect = on
 oftc.autoreconnect
 oftc.autoreconnect_delay
 oftc.nicks
-oftc.username = "languitar/oftc"
+oftc.username = "languitar@${sec.data.clientid}/oftc"
 oftc.realname
 oftc.local_hostname
 oftc.command
