--- a/home/.weechat/irc.conf
+++ b/home/.weechat/irc.conf
@@ -81,7 +81,6 @@ topic_new = white
 topic_old = default
 
 [network]
-alternate_nick = on
 autoreconnect_delay_growing = 2
 autoreconnect_delay_max = 600
 ban_mask_default = "*!$ident@$host"
@@ -142,6 +141,7 @@ default_msg_quit = "WeeChat %v"
 ipv6 = on
 local_hostname = ""
 nicks = "languitar,languitar1,languitar2,languitar3,languitar4"
+nicks_alternate = on
 notify = ""
 password = ""
 proxy = ""
@@ -183,6 +183,7 @@ freenode.autoreconnect
 freenode.autoreconnect_delay
 freenode.nicks
 freenode.username = "languitar@${sec.data.clientid}/freenode"
+freenode.nicks_alternate
 freenode.realname
 freenode.local_hostname
 freenode.command
@@ -221,6 +222,7 @@ oftc.autoreconnect
 oftc.autoreconnect_delay
 oftc.nicks
 oftc.username = "languitar@${sec.data.clientid}/oftc"
+oftc.nicks_alternate
 oftc.realname
 oftc.local_hostname
 oftc.command
