Add hackint network

--- a/home/.weechat/irc.conf
+++ b/home/.weechat/irc.conf
@@ -239,3 +239,42 @@ oftc.default_msg_kick
 oftc.default_msg_part
 oftc.default_msg_quit
 oftc.notify
+hackint.addresses = "semipol.de/6667"
+hackint.proxy
+hackint.ipv6
+hackint.ssl = on
+hackint.ssl_cert
+hackint.ssl_priorities
+hackint.ssl_dhkey_size
+hackint.ssl_fingerprint
+hackint.ssl_verify = on
+hackint.password = "${sec.data.semipol}"
+hackint.capabilities
+hackint.sasl_mechanism
+hackint.sasl_username
+hackint.sasl_password
+hackint.sasl_key
+hackint.sasl_timeout
+hackint.sasl_fail
+hackint.autoconnect = on
+hackint.autoreconnect
+hackint.autoreconnect_delay
+hackint.nicks
+hackint.nicks_alternate
+hackint.username = "languitar@${sec.data.clientid}/hackint"
+hackint.realname
+hackint.local_hostname
+hackint.command
+hackint.command_delay
+hackint.autojoin
+hackint.autorejoin
+hackint.autorejoin_delay
+hackint.connection_timeout
+hackint.anti_flood_prio_high
+hackint.anti_flood_prio_low
+hackint.away_check
+hackint.away_check_max_nicks
+hackint.msg_kick
+hackint.msg_part
+hackint.msg_quit
+hackint.notify
