--- a/home/.weechat/weechat.conf
+++ b/home/.weechat/weechat.conf
@@ -172,7 +172,7 @@ input_actions = lightgreen
 input_text_not_found = red
 nicklist_away = cyan
 nicklist_group = green
-separator = blue
+separator = gray
 status_count_highlight = magenta
 status_count_msg = brown
 status_count_other = default
@@ -283,7 +283,7 @@ nicklist.separator = on
 nicklist.size = 0
 nicklist.size_max = 12
 nicklist.type = window
-status.color_bg = blue
+status.color_bg = 24
 status.color_delim = cyan
 status.color_fg = default
 status.conditions = ""
@@ -297,7 +297,7 @@ status.separator = off
 status.size = 1
 status.size_max = 0
 status.type = window
-title.color_bg = blue
+title.color_bg = 24
 title.color_delim = cyan
 title.color_fg = default
 title.conditions = ""
