--- a/home/.weechat/irc.conf
+++ b/home/.weechat/irc.conf
@@ -1,6 +1,13 @@
 #
 # weechat -- irc.conf
 #
+# WARNING: It is NOT recommended to edit this file by hand,
+# especially if WeeChat is running.
+#
+# Use /set or similar command to change settings in WeeChat.
+#
+# For more info, see: https://weechat.org/doc/quickstart
+#
 
 [look]
 buffer_open_before_autojoin = on
@@ -27,7 +34,6 @@ highlight_channel = "$nick"
 highlight_pv = "$nick"
 highlight_server = "$nick"
 highlight_tags_restrict = "irc_privmsg,irc_notice"
-item_away_message = on
 item_channel_modes_hide_args = "k"
 item_display_server = buffer_plugin
 item_nick_modes = on
@@ -36,9 +42,6 @@ join_auto_add_chantype = off
 msgbuffer_fallback = current
 new_channel_position = none
 new_pv_position = none
-nick_color_force = ""
-nick_color_hash = sum
-nick_color_stop_chars = "_|["
 nick_completion_smart = speakers
 nick_mode = prefix
 nick_mode_empty = off
@@ -65,7 +68,6 @@ topic_strip_colors = off
 
 [color]
 input_nick = lightcyan
-item_away = yellow
 item_channel_modes = default
 item_lag_counting = default
 item_lag_finished = yellow
@@ -94,6 +96,7 @@ lag_reconnect = 0
 lag_refresh_interval = 1
 notify_check_ison = 1
 notify_check_whois = 5
+sasl_fail_unavailable = on
 send_unknown_commands = off
 whois_double_nick = off
 
@@ -135,11 +138,11 @@ capabilities = "account-notify,away-notify,cap-notify,multi-prefix,server-time,z
 command = ""
 command_delay = 0
 connection_timeout = 60
-default_msg_kick = ""
-default_msg_part = "WeeChat %v"
-default_msg_quit = "WeeChat %v"
 ipv6 = on
 local_hostname = ""
+msg_kick = ""
+msg_part = "WeeChat ${info:version}"
+msg_quit = "WeeChat ${info:version}"
 nicks = "languitar,languitar1,languitar2,languitar3,languitar4"
 nicks_alternate = on
 notify = ""
@@ -158,6 +161,7 @@ ssl_dhkey_size = 2048
 ssl_fingerprint = ""
 ssl_priorities = "NORMAL:-VERS-SSL3.0"
 ssl_verify = on
+usermode = ""
 username = "languitar"
 
 [server]
@@ -182,10 +186,11 @@ freenode.autoconnect = on
 freenode.autoreconnect
 freenode.autoreconnect_delay
 freenode.nicks
-freenode.username = "languitar@${sec.data.clientid}/freenode"
 freenode.nicks_alternate
+freenode.username = "languitar@${sec.data.clientid}/freenode"
 freenode.realname
 freenode.local_hostname
+freenode.usermode
 freenode.command
 freenode.command_delay
 freenode.autojoin
@@ -196,9 +201,9 @@ freenode.anti_flood_prio_high
 freenode.anti_flood_prio_low
 freenode.away_check
 freenode.away_check_max_nicks
-freenode.default_msg_kick
-freenode.default_msg_part
-freenode.default_msg_quit
+freenode.msg_kick
+freenode.msg_part
+freenode.msg_quit
 freenode.notify
 oftc.addresses = "semipol.de/6667"
 oftc.proxy
@@ -221,10 +226,11 @@ oftc.autoconnect = on
 oftc.autoreconnect
 oftc.autoreconnect_delay
 oftc.nicks
-oftc.username = "languitar@${sec.data.clientid}/oftc"
 oftc.nicks_alternate
+oftc.username = "languitar@${sec.data.clientid}/oftc"
 oftc.realname
 oftc.local_hostname
+oftc.usermode
 oftc.command
 oftc.command_delay
 oftc.autojoin
@@ -235,9 +241,9 @@ oftc.anti_flood_prio_high
 oftc.anti_flood_prio_low
 oftc.away_check
 oftc.away_check_max_nicks
-oftc.default_msg_kick
-oftc.default_msg_part
-oftc.default_msg_quit
+oftc.msg_kick
+oftc.msg_part
+oftc.msg_quit
 oftc.notify
 hackint.addresses = "semipol.de/6667"
 hackint.proxy
@@ -264,6 +270,7 @@ hackint.nicks_alternate
 hackint.username = "languitar@${sec.data.clientid}/hackint"
 hackint.realname
 hackint.local_hostname
+hackint.usermode
 hackint.command
 hackint.command_delay
 hackint.autojoin
