--- a/home/.weechat/plugins.conf
+++ b/home/.weechat/plugins.conf
@@ -50,6 +50,26 @@ python.grep.log_filter = ""
 python.grep.max_lines = "4000"
 python.grep.show_summary = "on"
 python.grep.size_limit = "2048"
+python.notify_send.ellipsis = "[..]"
+python.notify_send.escape_html = "on"
+python.notify_send.icon = "/usr/share/icons/hicolor/32x32/apps/weechat.png"
+python.notify_send.ignore_buffers = ""
+python.notify_send.ignore_buffers_starting_with = ""
+python.notify_send.ignore_messages_tagged_with = "irc_join,irc_quit,irc_part,irc_status,irc_nick_back,irc_401,irc_402"
+python.notify_send.ignore_nicks = ""
+python.notify_send.ignore_nicks_starting_with = ""
+python.notify_send.max_length = "72"
+python.notify_send.min_notification_delay = "500"
+python.notify_send.nick_separator = ": "
+python.notify_send.notify_for_current_buffer = "on"
+python.notify_send.notify_on_all_messages_in_buffers = "#rsb,#osm"
+python.notify_send.notify_on_filtered_messages = "off"
+python.notify_send.notify_on_highlights = "on"
+python.notify_send.notify_on_privmsgs = "on"
+python.notify_send.notify_when_away = "on"
+python.notify_send.timeout = "5000"
+python.notify_send.transient = "on"
+python.notify_send.urgency = "normal"
 python.spell_correction.auto_pop_up_item = "off"
 python.spell_correction.auto_replace = "on"
 python.spell_correction.catch_input_completion = "on"
@@ -79,6 +99,30 @@ perl.beep.bell_always = "use $bell on private messages and/or highlights regardl
 perl.beep.blacklist_nicks = "comma-separated list of "server.nick": if not empty, these nicks will not be able to trigger execution of commands. Cannot be used in conjuction with whitelist (example: "freenode.nick1,freenode.nick2") (default: "")"
 perl.beep.whitelist_channels = "comma-separated list of "server.#channel": if not empty, only these channels will trigger execution of commands (example: "freenode.#weechat,freenode.#channel2") (default: "")"
 perl.beep.whitelist_nicks = "comma-separated list of "server.nick": if not empty, only these nicks will trigger execution of commands (example: "freenode.nick1,freenode.nick2") (default: "")"
+perl.notify_send.command = "systemcommand to be executed ($type, $name, and $messagewill be interpreted as values) (default: "notify-send $type: $name &>/dev/null")"
+perl.notify_send.ignore_nicks = "comma-separated list of nicks to ignore (default: "")"
+perl.notify_send.wait_highlight = "necessary time delay between highlights(seconds) for command to be executed (default: "60")"
+perl.notify_send.wait_pm = "necessary time delay between private messages(seconds) for command to be executed (default: "180")"
+python.notify_send.ellipsis = "Ellipsis to be used for notifications that are too long. Default: [..]."
+python.notify_send.escape_html = "Escapes the '<', '>', and '&' characters in notification messages. Default: on."
+python.notify_send.icon = "Path to an icon to be shown in notifications. Default: /usr/share/icons/hicolor/32x32/apps/weechat.png."
+python.notify_send.ignore_buffers = "A comma-separated list of buffers from which no notifications should be shown. Default: ""."
+python.notify_send.ignore_buffers_starting_with = "A comma-separated list of buffer prefixes from which no notifications should be shown. Default: ""."
+python.notify_send.ignore_messages_tagged_with = "A comma-separated list of message tags for which no notifications should be shown. Default: irc_join,irc_quit,irc_part,irc_status,irc_nick_back,irc_401,irc_402."
+python.notify_send.ignore_nicks = "A comma-separated list of nicks from which no notifications should be shown. Default: ""."
+python.notify_send.ignore_nicks_starting_with = "A comma-separated list of nick prefixes from which no notifications should be shown. Default: ""."
+python.notify_send.max_length = "Maximal length of a notification (0 means no limit). Default: 72."
+python.notify_send.min_notification_delay = "A minimal delay between successive notifications from the same buffer (in milliseconds; set to 0 to show all notifications). Default: 500."
+python.notify_send.nick_separator = "A separator between a nick and a message. Default: : ."
+python.notify_send.notify_for_current_buffer = "Send also notifications for the currently active buffer. Default: on."
+python.notify_send.notify_on_all_messages_in_buffers = "A comma-separated list of buffers for which you want to receive notifications on all messages that appear in them. Default: ""."
+python.notify_send.notify_on_filtered_messages = "Send notifications also on filtered (hidden) messages. Default: off."
+python.notify_send.notify_on_highlights = "Send notifications on highlights. Default: on."
+python.notify_send.notify_on_privmsgs = "Send notifications on private messages. Default: on."
+python.notify_send.notify_when_away = "Send also notifications when away. Default: on."
+python.notify_send.timeout = "Time after which the notification disappears (in milliseconds; set to 0 to disable). Default: 5000."
+python.notify_send.transient = "When a notification expires or is dismissed, remove it from the notification bar. Default: on."
+python.notify_send.urgency = "Urgency (low, normal, critical). Default: normal."
 python.spell_correction.auto_pop_up_item = "automatic pop-up suggestion item on a misspelled word (default: "off")"
 python.spell_correction.auto_replace = "replaces misspelled word with selected suggestion, automatically. If you use "off" you will have to bind command "/spell_correction replace" to a key (default: "on")"
 python.spell_correction.catch_input_completion = "will catch the input_complete commands [TAB-key] (default: "on")"
