--- a/home/.weechat/plugins.conf
+++ b/home/.weechat/plugins.conf
@@ -62,7 +62,7 @@ python.notify_send.max_length = "72"
 python.notify_send.min_notification_delay = "500"
 python.notify_send.nick_separator = ": "
 python.notify_send.notify_for_current_buffer = "on"
-python.notify_send.notify_on_all_messages_in_buffers = "#rsb,#osm"
+python.notify_send.notify_on_all_messages_in_buffers = "#rsb"
 python.notify_send.notify_on_filtered_messages = "off"
 python.notify_send.notify_on_highlights = "on"
 python.notify_send.notify_on_privmsgs = "on"
