--- a/home/.weechat/irc.conf
+++ b/home/.weechat/irc.conf
@@ -285,3 +285,43 @@ hackint.msg_kick
 hackint.msg_part
 hackint.msg_quit
 hackint.notify
+gitter.addresses = "semipol.de/6667"
+gitter.proxy
+gitter.ipv6
+gitter.ssl = on
+gitter.ssl_cert
+gitter.ssl_priorities
+gitter.ssl_dhkey_size
+gitter.ssl_fingerprint
+gitter.ssl_verify = on
+gitter.password = "${sec.data.semipol}"
+gitter.capabilities
+gitter.sasl_mechanism
+gitter.sasl_username
+gitter.sasl_password
+gitter.sasl_key
+gitter.sasl_timeout
+gitter.sasl_fail
+gitter.autoconnect = on
+gitter.autoreconnect
+gitter.autoreconnect_delay
+gitter.nicks
+gitter.nicks_alternate
+gitter.username = "languitar@${sec.data.clientid}/gitter"
+gitter.realname
+gitter.local_hostname
+gitter.usermode
+gitter.command
+gitter.command_delay
+gitter.autojoin
+gitter.autorejoin
+gitter.autorejoin_delay
+gitter.connection_timeout
+gitter.anti_flood_prio_high
+gitter.anti_flood_prio_low
+gitter.away_check
+gitter.away_check_max_nicks
+gitter.msg_kick
+gitter.msg_part
+gitter.msg_quit
+gitter.notify
