--- a/home/.weechat/irc.conf
+++ b/home/.weechat/irc.conf
@@ -30,6 +30,7 @@ display_join_message = "329,332,333,366"
 display_old_topic = on
 display_pv_away_once = on
 display_pv_back = on
+display_pv_warning_address = off
 highlight_channel = "$nick"
 highlight_pv = "$nick"
 highlight_server = "$nick"
@@ -57,6 +58,7 @@ pv_tags = "notify_private"
 raw_messages = 256
 server_buffer = independent
 smart_filter = on
+smart_filter_chghost = on
 smart_filter_delay = 5
 smart_filter_join = on
 smart_filter_join_unmask = 30
@@ -72,11 +74,14 @@ item_channel_modes = default
 item_lag_counting = default
 item_lag_finished = yellow
 item_nick_modes = default
+message_chghost = brown
 message_join = green
+message_kick = red
 message_quit = red
 mirc_remap = "1,-1:darkgray"
 nick_prefixes = "q:lightred;a:lightcyan;o:lightgreen;h:lightmagenta;v:yellow;*:lightblue"
 notice = green
+reason_kick = default
 reason_quit = default
 topic_current = default
 topic_new = white
@@ -86,7 +91,6 @@ topic_old = default
 autoreconnect_delay_growing = 2
 autoreconnect_delay_max = 600
 ban_mask_default = "*!$ident@$host"
-channel_encode = off
 colors_receive = on
 colors_send = on
 lag_check = 60
@@ -135,6 +139,7 @@ autorejoin_delay = 30
 away_check = 0
 away_check_max_nicks = 25
 capabilities = "account-notify,away-notify,cap-notify,multi-prefix,server-time,znc.in/server-time-iso,znc.in/self-message"
+charset_message = message
 command = ""
 command_delay = 0
 connection_timeout = 60
@@ -155,10 +160,12 @@ sasl_mechanism = plain
 sasl_password = ""
 sasl_timeout = 15
 sasl_username = ""
+split_msg_max_length = 512
 ssl = off
 ssl_cert = ""
 ssl_dhkey_size = 2048
 ssl_fingerprint = ""
+ssl_password = ""
 ssl_priorities = "NORMAL:-VERS-SSL3.0"
 ssl_verify = on
 usermode = ""
@@ -170,6 +177,7 @@ freenode.proxy
 freenode.ipv6
 freenode.ssl = on
 freenode.ssl_cert
+freenode.ssl_password
 freenode.ssl_priorities
 freenode.ssl_dhkey_size
 freenode.ssl_fingerprint
@@ -205,11 +213,14 @@ freenode.msg_kick
 freenode.msg_part
 freenode.msg_quit
 freenode.notify
+freenode.split_msg_max_length
+freenode.charset_message
 oftc.addresses = "semipol.de/6667"
 oftc.proxy
 oftc.ipv6
 oftc.ssl = on
 oftc.ssl_cert
+oftc.ssl_password
 oftc.ssl_priorities
 oftc.ssl_dhkey_size
 oftc.ssl_fingerprint
@@ -245,11 +256,14 @@ oftc.msg_kick
 oftc.msg_part
 oftc.msg_quit
 oftc.notify
+oftc.split_msg_max_length
+oftc.charset_message
 hackint.addresses = "semipol.de/6667"
 hackint.proxy
 hackint.ipv6
 hackint.ssl = on
 hackint.ssl_cert
+hackint.ssl_password
 hackint.ssl_priorities
 hackint.ssl_dhkey_size
 hackint.ssl_fingerprint
@@ -285,11 +299,14 @@ hackint.msg_kick
 hackint.msg_part
 hackint.msg_quit
 hackint.notify
+hackint.split_msg_max_length
+hackint.charset_message
 gitter.addresses = "semipol.de/6667"
 gitter.proxy
 gitter.ipv6
 gitter.ssl = on
 gitter.ssl_cert
+gitter.ssl_password
 gitter.ssl_priorities
 gitter.ssl_dhkey_size
 gitter.ssl_fingerprint
@@ -325,3 +342,5 @@ gitter.msg_kick
 gitter.msg_part
 gitter.msg_quit
 gitter.notify
+gitter.split_msg_max_length
+gitter.charset_message
